libs/iresearch/include/iresearch/parser/lucene_parser.output
Grammar

    0 $accept: query $end

    1 query: clause_list

    2 clause_list: clause
    3            | clause_list clause

    4 @1: ε

    5 clause_list: clause_list AND @1 clause

    6 $@2: ε

    7 clause_list: clause_list OR $@2 clause

    8 clause: term_expr

    9 @3: ε

   10 @4: ε

   11 clause: NOT @3 @4 clause

   12 $@5: ε

   13 clause: PLUS $@5 clause

   14 @6: ε

   15 @7: ε

   16 clause: MINUS @6 @7 clause

   17 term_expr: boosted_expr

   18 @8: ε

   19 term_expr: TERM COLON @8 term_expr

   20 boosted_expr: modified_term
   21             | modified_term CARET NUMBER
   22             | modified_term CARET FLOAT

   23 modified_term: base_term
   24              | TERM TILDE
   25              | TERM TILDE NUMBER
   26              | PHRASE TILDE
   27              | PHRASE TILDE NUMBER

   28 base_term: TERM
   29          | PHRASE
   30          | REGEX
   31          | PREFIX
   32          | SUFFIX
   33          | WILDCARD
   34          | range_expr

   35 @9: ε

   36 base_term: LPAREN @9 clause_list RPAREN

   37 range_expr: LBRACKET range_bound TO range_bound RBRACKET
   38           | LBRACE range_bound TO range_bound RBRACE
   39           | LBRACKET range_bound TO range_bound RBRACE
   40           | LBRACE range_bound TO range_bound RBRACKET

   41 range_bound: TERM
   42            | STAR


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TERM <sv> (258) 19 24 25 28 41
    PHRASE <sv> (259) 26 27 29
    REGEX <sv> (260) 30
    PREFIX <sv> (261) 31
    SUFFIX <sv> (262) 32
    WILDCARD <sv> (263) 33
    STAR <sv> (264) 42
    NUMBER <num> (265) 21 25 27
    FLOAT <fnum> (266) 22
    AND (267) 5
    OR (268) 7
    NOT (269) 11
    TO (270) 37 38 39 40
    LPAREN (271) 36
    RPAREN (272) 36
    LBRACKET (273) 37 39
    RBRACKET (274) 37 40
    LBRACE (275) 38 40
    RBRACE (276) 38 39
    COLON (277) 19
    CARET (278) 21 22
    TILDE (279) 24 25 26 27
    PLUS (280) 13
    MINUS (281) 16


Nonterminals, with rules where they appear

    $accept (27)
        on left: 0
    query <filter> (28)
        on left: 1
        on right: 0
    clause_list <filter> (29)
        on left: 2 3 5 7
        on right: 1 3 5 7 36
    @1 (30)
        on left: 4
        on right: 5
    $@2 (31)
        on left: 6
        on right: 7
    clause <filter> (32)
        on left: 8 11 13 16
        on right: 2 3 5 7 11 13 16
    @3 (33)
        on left: 9
        on right: 11
    @4 (34)
        on left: 10
        on right: 11
    $@5 (35)
        on left: 12
        on right: 13
    @6 (36)
        on left: 14
        on right: 16
    @7 (37)
        on left: 15
        on right: 16
    term_expr <filter> (38)
        on left: 17 19
        on right: 8 19
    @8 (39)
        on left: 18
        on right: 19
    boosted_expr <filter> (40)
        on left: 20 21 22
        on right: 17
    modified_term <filter> (41)
        on left: 23 24 25 26 27
        on right: 20 21 22
    base_term <filter> (42)
        on left: 28 29 30 31 32 33 34 36
        on right: 23
    @9 (43)
        on left: 35
        on right: 36
    range_expr <filter> (44)
        on left: 37 38 39 40
        on right: 34
    range_bound <sv> (45)
        on left: 41 42
        on right: 37 38 39 40


State 0

    0 $accept: • query $end
    1 query: • clause_list
    2 clause_list: • clause
    3            | • clause_list clause
    5            | • clause_list AND @1 clause
    7            | • clause_list OR $@2 clause
    8 clause: • term_expr
   11       | • NOT @3 @4 clause
   13       | • PLUS $@5 clause
   16       | • MINUS @6 @7 clause
   17 term_expr: • boosted_expr
   19          | • TERM COLON @8 term_expr
   20 boosted_expr: • modified_term
   21             | • modified_term CARET NUMBER
   22             | • modified_term CARET FLOAT
   23 modified_term: • base_term
   24              | • TERM TILDE
   25              | • TERM TILDE NUMBER
   26              | • PHRASE TILDE
   27              | • PHRASE TILDE NUMBER
   28 base_term: • TERM
   29          | • PHRASE
   30          | • REGEX
   31          | • PREFIX
   32          | • SUFFIX
   33          | • WILDCARD
   34          | • range_expr
   36          | • LPAREN @9 clause_list RPAREN
   37 range_expr: • LBRACKET range_bound TO range_bound RBRACKET
   38           | • LBRACE range_bound TO range_bound RBRACE
   39           | • LBRACKET range_bound TO range_bound RBRACE
   40           | • LBRACE range_bound TO range_bound RBRACKET

    TERM      shift, and go to state 1
    PHRASE    shift, and go to state 2
    REGEX     shift, and go to state 3
    PREFIX    shift, and go to state 4
    SUFFIX    shift, and go to state 5
    WILDCARD  shift, and go to state 6
    NOT       shift, and go to state 7
    LPAREN    shift, and go to state 8
    LBRACKET  shift, and go to state 9
    LBRACE    shift, and go to state 10
    PLUS      shift, and go to state 11
    MINUS     shift, and go to state 12

    query          go to state 13
    clause_list    go to state 14
    clause         go to state 15
    term_expr      go to state 16
    boosted_expr   go to state 17
    modified_term  go to state 18
    base_term      go to state 19
    range_expr     go to state 20


State 1

   19 term_expr: TERM • COLON @8 term_expr
   24 modified_term: TERM • TILDE
   25              | TERM • TILDE NUMBER
   28 base_term: TERM •  [$end, TERM, PHRASE, REGEX, PREFIX, SUFFIX, WILDCARD, AND, OR, NOT, LPAREN, RPAREN, LBRACKET, LBRACE, CARET, PLUS, MINUS]

    COLON  shift, and go to state 21
    TILDE  shift, and go to state 22

    $default  reduce using rule 28 (base_term)


State 2

   26 modified_term: PHRASE • TILDE
   27              | PHRASE • TILDE NUMBER
   29 base_term: PHRASE •  [$end, TERM, PHRASE, REGEX, PREFIX, SUFFIX, WILDCARD, AND, OR, NOT, LPAREN, RPAREN, LBRACKET, LBRACE, CARET, PLUS, MINUS]

    TILDE  shift, and go to state 23

    $default  reduce using rule 29 (base_term)


State 3

   30 base_term: REGEX •

    $default  reduce using rule 30 (base_term)


State 4

   31 base_term: PREFIX •

    $default  reduce using rule 31 (base_term)


State 5

   32 base_term: SUFFIX •

    $default  reduce using rule 32 (base_term)


State 6

   33 base_term: WILDCARD •

    $default  reduce using rule 33 (base_term)


State 7

    9 @3: ε •
   11 clause: NOT • @3 @4 clause

    $default  reduce using rule 9 (@3)

    @3  go to state 24


State 8

   35 @9: ε •
   36 base_term: LPAREN • @9 clause_list RPAREN

    $default  reduce using rule 35 (@9)

    @9  go to state 25


State 9

   37 range_expr: LBRACKET • range_bound TO range_bound RBRACKET
   39           | LBRACKET • range_bound TO range_bound RBRACE
   41 range_bound: • TERM
   42            | • STAR

    TERM  shift, and go to state 26
    STAR  shift, and go to state 27

    range_bound  go to state 28


State 10

   38 range_expr: LBRACE • range_bound TO range_bound RBRACE
   40           | LBRACE • range_bound TO range_bound RBRACKET
   41 range_bound: • TERM
   42            | • STAR

    TERM  shift, and go to state 26
    STAR  shift, and go to state 27

    range_bound  go to state 29


State 11

   12 $@5: ε •
   13 clause: PLUS • $@5 clause

    $default  reduce using rule 12 ($@5)

    $@5  go to state 30


State 12

   14 @6: ε •
   16 clause: MINUS • @6 @7 clause

    $default  reduce using rule 14 (@6)

    @6  go to state 31


State 13

    0 $accept: query • $end

    $end  shift, and go to state 32


State 14

    1 query: clause_list •  [$end]
    3 clause_list: clause_list • clause
    5            | clause_list • AND @1 clause
    7            | clause_list • OR $@2 clause
    8 clause: • term_expr
   11       | • NOT @3 @4 clause
   13       | • PLUS $@5 clause
   16       | • MINUS @6 @7 clause
   17 term_expr: • boosted_expr
   19          | • TERM COLON @8 term_expr
   20 boosted_expr: • modified_term
   21             | • modified_term CARET NUMBER
   22             | • modified_term CARET FLOAT
   23 modified_term: • base_term
   24              | • TERM TILDE
   25              | • TERM TILDE NUMBER
   26              | • PHRASE TILDE
   27              | • PHRASE TILDE NUMBER
   28 base_term: • TERM
   29          | • PHRASE
   30          | • REGEX
   31          | • PREFIX
   32          | • SUFFIX
   33          | • WILDCARD
   34          | • range_expr
   36          | • LPAREN @9 clause_list RPAREN
   37 range_expr: • LBRACKET range_bound TO range_bound RBRACKET
   38           | • LBRACE range_bound TO range_bound RBRACE
   39           | • LBRACKET range_bound TO range_bound RBRACE
   40           | • LBRACE range_bound TO range_bound RBRACKET

    TERM      shift, and go to state 1
    PHRASE    shift, and go to state 2
    REGEX     shift, and go to state 3
    PREFIX    shift, and go to state 4
    SUFFIX    shift, and go to state 5
    WILDCARD  shift, and go to state 6
    AND       shift, and go to state 33
    OR        shift, and go to state 34
    NOT       shift, and go to state 7
    LPAREN    shift, and go to state 8
    LBRACKET  shift, and go to state 9
    LBRACE    shift, and go to state 10
    PLUS      shift, and go to state 11
    MINUS     shift, and go to state 12

    $default  reduce using rule 1 (query)

    clause         go to state 35
    term_expr      go to state 16
    boosted_expr   go to state 17
    modified_term  go to state 18
    base_term      go to state 19
    range_expr     go to state 20


State 15

    2 clause_list: clause •

    $default  reduce using rule 2 (clause_list)


State 16

    8 clause: term_expr •

    $default  reduce using rule 8 (clause)


State 17

   17 term_expr: boosted_expr •

    $default  reduce using rule 17 (term_expr)


State 18

   20 boosted_expr: modified_term •  [$end, TERM, PHRASE, REGEX, PREFIX, SUFFIX, WILDCARD, AND, OR, NOT, LPAREN, RPAREN, LBRACKET, LBRACE, PLUS, MINUS]
   21             | modified_term • CARET NUMBER
   22             | modified_term • CARET FLOAT

    CARET  shift, and go to state 36

    $default  reduce using rule 20 (boosted_expr)


State 19

   23 modified_term: base_term •

    $default  reduce using rule 23 (modified_term)


State 20

   34 base_term: range_expr •

    $default  reduce using rule 34 (base_term)


State 21

   18 @8: ε •
   19 term_expr: TERM COLON • @8 term_expr

    $default  reduce using rule 18 (@8)

    @8  go to state 37


State 22

   24 modified_term: TERM TILDE •  [$end, TERM, PHRASE, REGEX, PREFIX, SUFFIX, WILDCARD, AND, OR, NOT, LPAREN, RPAREN, LBRACKET, LBRACE, CARET, PLUS, MINUS]
   25              | TERM TILDE • NUMBER

    NUMBER  shift, and go to state 38

    $default  reduce using rule 24 (modified_term)


State 23

   26 modified_term: PHRASE TILDE •  [$end, TERM, PHRASE, REGEX, PREFIX, SUFFIX, WILDCARD, AND, OR, NOT, LPAREN, RPAREN, LBRACKET, LBRACE, CARET, PLUS, MINUS]
   27              | PHRASE TILDE • NUMBER

    NUMBER  shift, and go to state 39

    $default  reduce using rule 26 (modified_term)


State 24

   10 @4: ε •
   11 clause: NOT @3 • @4 clause

    $default  reduce using rule 10 (@4)

    @4  go to state 40


State 25

    2 clause_list: • clause
    3            | • clause_list clause
    5            | • clause_list AND @1 clause
    7            | • clause_list OR $@2 clause
    8 clause: • term_expr
   11       | • NOT @3 @4 clause
   13       | • PLUS $@5 clause
   16       | • MINUS @6 @7 clause
   17 term_expr: • boosted_expr
   19          | • TERM COLON @8 term_expr
   20 boosted_expr: • modified_term
   21             | • modified_term CARET NUMBER
   22             | • modified_term CARET FLOAT
   23 modified_term: • base_term
   24              | • TERM TILDE
   25              | • TERM TILDE NUMBER
   26              | • PHRASE TILDE
   27              | • PHRASE TILDE NUMBER
   28 base_term: • TERM
   29          | • PHRASE
   30          | • REGEX
   31          | • PREFIX
   32          | • SUFFIX
   33          | • WILDCARD
   34          | • range_expr
   36          | • LPAREN @9 clause_list RPAREN
   36          | LPAREN @9 • clause_list RPAREN
   37 range_expr: • LBRACKET range_bound TO range_bound RBRACKET
   38           | • LBRACE range_bound TO range_bound RBRACE
   39           | • LBRACKET range_bound TO range_bound RBRACE
   40           | • LBRACE range_bound TO range_bound RBRACKET

    TERM      shift, and go to state 1
    PHRASE    shift, and go to state 2
    REGEX     shift, and go to state 3
    PREFIX    shift, and go to state 4
    SUFFIX    shift, and go to state 5
    WILDCARD  shift, and go to state 6
    NOT       shift, and go to state 7
    LPAREN    shift, and go to state 8
    LBRACKET  shift, and go to state 9
    LBRACE    shift, and go to state 10
    PLUS      shift, and go to state 11
    MINUS     shift, and go to state 12

    clause_list    go to state 41
    clause         go to state 15
    term_expr      go to state 16
    boosted_expr   go to state 17
    modified_term  go to state 18
    base_term      go to state 19
    range_expr     go to state 20


State 26

   41 range_bound: TERM •

    $default  reduce using rule 41 (range_bound)


State 27

   42 range_bound: STAR •

    $default  reduce using rule 42 (range_bound)


State 28

   37 range_expr: LBRACKET range_bound • TO range_bound RBRACKET
   39           | LBRACKET range_bound • TO range_bound RBRACE

    TO  shift, and go to state 42


State 29

   38 range_expr: LBRACE range_bound • TO range_bound RBRACE
   40           | LBRACE range_bound • TO range_bound RBRACKET

    TO  shift, and go to state 43


State 30

    8 clause: • term_expr
   11       | • NOT @3 @4 clause
   13       | • PLUS $@5 clause
   13       | PLUS $@5 • clause
   16       | • MINUS @6 @7 clause
   17 term_expr: • boosted_expr
   19          | • TERM COLON @8 term_expr
   20 boosted_expr: • modified_term
   21             | • modified_term CARET NUMBER
   22             | • modified_term CARET FLOAT
   23 modified_term: • base_term
   24              | • TERM TILDE
   25              | • TERM TILDE NUMBER
   26              | • PHRASE TILDE
   27              | • PHRASE TILDE NUMBER
   28 base_term: • TERM
   29          | • PHRASE
   30          | • REGEX
   31          | • PREFIX
   32          | • SUFFIX
   33          | • WILDCARD
   34          | • range_expr
   36          | • LPAREN @9 clause_list RPAREN
   37 range_expr: • LBRACKET range_bound TO range_bound RBRACKET
   38           | • LBRACE range_bound TO range_bound RBRACE
   39           | • LBRACKET range_bound TO range_bound RBRACE
   40           | • LBRACE range_bound TO range_bound RBRACKET

    TERM      shift, and go to state 1
    PHRASE    shift, and go to state 2
    REGEX     shift, and go to state 3
    PREFIX    shift, and go to state 4
    SUFFIX    shift, and go to state 5
    WILDCARD  shift, and go to state 6
    NOT       shift, and go to state 7
    LPAREN    shift, and go to state 8
    LBRACKET  shift, and go to state 9
    LBRACE    shift, and go to state 10
    PLUS      shift, and go to state 11
    MINUS     shift, and go to state 12

    clause         go to state 44
    term_expr      go to state 16
    boosted_expr   go to state 17
    modified_term  go to state 18
    base_term      go to state 19
    range_expr     go to state 20


State 31

   15 @7: ε •
   16 clause: MINUS @6 • @7 clause

    $default  reduce using rule 15 (@7)

    @7  go to state 45


State 32

    0 $accept: query $end •

    $default  accept


State 33

    4 @1: ε •
    5 clause_list: clause_list AND • @1 clause

    $default  reduce using rule 4 (@1)

    @1  go to state 46


State 34

    6 $@2: ε •
    7 clause_list: clause_list OR • $@2 clause

    $default  reduce using rule 6 ($@2)

    $@2  go to state 47


State 35

    3 clause_list: clause_list clause •

    $default  reduce using rule 3 (clause_list)


State 36

   21 boosted_expr: modified_term CARET • NUMBER
   22             | modified_term CARET • FLOAT

    NUMBER  shift, and go to state 48
    FLOAT   shift, and go to state 49


State 37

   17 term_expr: • boosted_expr
   19          | • TERM COLON @8 term_expr
   19          | TERM COLON @8 • term_expr
   20 boosted_expr: • modified_term
   21             | • modified_term CARET NUMBER
   22             | • modified_term CARET FLOAT
   23 modified_term: • base_term
   24              | • TERM TILDE
   25              | • TERM TILDE NUMBER
   26              | • PHRASE TILDE
   27              | • PHRASE TILDE NUMBER
   28 base_term: • TERM
   29          | • PHRASE
   30          | • REGEX
   31          | • PREFIX
   32          | • SUFFIX
   33          | • WILDCARD
   34          | • range_expr
   36          | • LPAREN @9 clause_list RPAREN
   37 range_expr: • LBRACKET range_bound TO range_bound RBRACKET
   38           | • LBRACE range_bound TO range_bound RBRACE
   39           | • LBRACKET range_bound TO range_bound RBRACE
   40           | • LBRACE range_bound TO range_bound RBRACKET

    TERM      shift, and go to state 1
    PHRASE    shift, and go to state 2
    REGEX     shift, and go to state 3
    PREFIX    shift, and go to state 4
    SUFFIX    shift, and go to state 5
    WILDCARD  shift, and go to state 6
    LPAREN    shift, and go to state 8
    LBRACKET  shift, and go to state 9
    LBRACE    shift, and go to state 10

    term_expr      go to state 50
    boosted_expr   go to state 17
    modified_term  go to state 18
    base_term      go to state 19
    range_expr     go to state 20


State 38

   25 modified_term: TERM TILDE NUMBER •

    $default  reduce using rule 25 (modified_term)


State 39

   27 modified_term: PHRASE TILDE NUMBER •

    $default  reduce using rule 27 (modified_term)


State 40

    8 clause: • term_expr
   11       | • NOT @3 @4 clause
   11       | NOT @3 @4 • clause
   13       | • PLUS $@5 clause
   16       | • MINUS @6 @7 clause
   17 term_expr: • boosted_expr
   19          | • TERM COLON @8 term_expr
   20 boosted_expr: • modified_term
   21             | • modified_term CARET NUMBER
   22             | • modified_term CARET FLOAT
   23 modified_term: • base_term
   24              | • TERM TILDE
   25              | • TERM TILDE NUMBER
   26              | • PHRASE TILDE
   27              | • PHRASE TILDE NUMBER
   28 base_term: • TERM
   29          | • PHRASE
   30          | • REGEX
   31          | • PREFIX
   32          | • SUFFIX
   33          | • WILDCARD
   34          | • range_expr
   36          | • LPAREN @9 clause_list RPAREN
   37 range_expr: • LBRACKET range_bound TO range_bound RBRACKET
   38           | • LBRACE range_bound TO range_bound RBRACE
   39           | • LBRACKET range_bound TO range_bound RBRACE
   40           | • LBRACE range_bound TO range_bound RBRACKET

    TERM      shift, and go to state 1
    PHRASE    shift, and go to state 2
    REGEX     shift, and go to state 3
    PREFIX    shift, and go to state 4
    SUFFIX    shift, and go to state 5
    WILDCARD  shift, and go to state 6
    NOT       shift, and go to state 7
    LPAREN    shift, and go to state 8
    LBRACKET  shift, and go to state 9
    LBRACE    shift, and go to state 10
    PLUS      shift, and go to state 11
    MINUS     shift, and go to state 12

    clause         go to state 51
    term_expr      go to state 16
    boosted_expr   go to state 17
    modified_term  go to state 18
    base_term      go to state 19
    range_expr     go to state 20


State 41

    3 clause_list: clause_list • clause
    5            | clause_list • AND @1 clause
    7            | clause_list • OR $@2 clause
    8 clause: • term_expr
   11       | • NOT @3 @4 clause
   13       | • PLUS $@5 clause
   16       | • MINUS @6 @7 clause
   17 term_expr: • boosted_expr
   19          | • TERM COLON @8 term_expr
   20 boosted_expr: • modified_term
   21             | • modified_term CARET NUMBER
   22             | • modified_term CARET FLOAT
   23 modified_term: • base_term
   24              | • TERM TILDE
   25              | • TERM TILDE NUMBER
   26              | • PHRASE TILDE
   27              | • PHRASE TILDE NUMBER
   28 base_term: • TERM
   29          | • PHRASE
   30          | • REGEX
   31          | • PREFIX
   32          | • SUFFIX
   33          | • WILDCARD
   34          | • range_expr
   36          | • LPAREN @9 clause_list RPAREN
   36          | LPAREN @9 clause_list • RPAREN
   37 range_expr: • LBRACKET range_bound TO range_bound RBRACKET
   38           | • LBRACE range_bound TO range_bound RBRACE
   39           | • LBRACKET range_bound TO range_bound RBRACE
   40           | • LBRACE range_bound TO range_bound RBRACKET

    TERM      shift, and go to state 1
    PHRASE    shift, and go to state 2
    REGEX     shift, and go to state 3
    PREFIX    shift, and go to state 4
    SUFFIX    shift, and go to state 5
    WILDCARD  shift, and go to state 6
    AND       shift, and go to state 33
    OR        shift, and go to state 34
    NOT       shift, and go to state 7
    LPAREN    shift, and go to state 8
    RPAREN    shift, and go to state 52
    LBRACKET  shift, and go to state 9
    LBRACE    shift, and go to state 10
    PLUS      shift, and go to state 11
    MINUS     shift, and go to state 12

    clause         go to state 35
    term_expr      go to state 16
    boosted_expr   go to state 17
    modified_term  go to state 18
    base_term      go to state 19
    range_expr     go to state 20


State 42

   37 range_expr: LBRACKET range_bound TO • range_bound RBRACKET
   39           | LBRACKET range_bound TO • range_bound RBRACE
   41 range_bound: • TERM
   42            | • STAR

    TERM  shift, and go to state 26
    STAR  shift, and go to state 27

    range_bound  go to state 53


State 43

   38 range_expr: LBRACE range_bound TO • range_bound RBRACE
   40           | LBRACE range_bound TO • range_bound RBRACKET
   41 range_bound: • TERM
   42            | • STAR

    TERM  shift, and go to state 26
    STAR  shift, and go to state 27

    range_bound  go to state 54


State 44

   13 clause: PLUS $@5 clause •

    $default  reduce using rule 13 (clause)


State 45

    8 clause: • term_expr
   11       | • NOT @3 @4 clause
   13       | • PLUS $@5 clause
   16       | • MINUS @6 @7 clause
   16       | MINUS @6 @7 • clause
   17 term_expr: • boosted_expr
   19          | • TERM COLON @8 term_expr
   20 boosted_expr: • modified_term
   21             | • modified_term CARET NUMBER
   22             | • modified_term CARET FLOAT
   23 modified_term: • base_term
   24              | • TERM TILDE
   25              | • TERM TILDE NUMBER
   26              | • PHRASE TILDE
   27              | • PHRASE TILDE NUMBER
   28 base_term: • TERM
   29          | • PHRASE
   30          | • REGEX
   31          | • PREFIX
   32          | • SUFFIX
   33          | • WILDCARD
   34          | • range_expr
   36          | • LPAREN @9 clause_list RPAREN
   37 range_expr: • LBRACKET range_bound TO range_bound RBRACKET
   38           | • LBRACE range_bound TO range_bound RBRACE
   39           | • LBRACKET range_bound TO range_bound RBRACE
   40           | • LBRACE range_bound TO range_bound RBRACKET

    TERM      shift, and go to state 1
    PHRASE    shift, and go to state 2
    REGEX     shift, and go to state 3
    PREFIX    shift, and go to state 4
    SUFFIX    shift, and go to state 5
    WILDCARD  shift, and go to state 6
    NOT       shift, and go to state 7
    LPAREN    shift, and go to state 8
    LBRACKET  shift, and go to state 9
    LBRACE    shift, and go to state 10
    PLUS      shift, and go to state 11
    MINUS     shift, and go to state 12

    clause         go to state 55
    term_expr      go to state 16
    boosted_expr   go to state 17
    modified_term  go to state 18
    base_term      go to state 19
    range_expr     go to state 20


State 46

    5 clause_list: clause_list AND @1 • clause
    8 clause: • term_expr
   11       | • NOT @3 @4 clause
   13       | • PLUS $@5 clause
   16       | • MINUS @6 @7 clause
   17 term_expr: • boosted_expr
   19          | • TERM COLON @8 term_expr
   20 boosted_expr: • modified_term
   21             | • modified_term CARET NUMBER
   22             | • modified_term CARET FLOAT
   23 modified_term: • base_term
   24              | • TERM TILDE
   25              | • TERM TILDE NUMBER
   26              | • PHRASE TILDE
   27              | • PHRASE TILDE NUMBER
   28 base_term: • TERM
   29          | • PHRASE
   30          | • REGEX
   31          | • PREFIX
   32          | • SUFFIX
   33          | • WILDCARD
   34          | • range_expr
   36          | • LPAREN @9 clause_list RPAREN
   37 range_expr: • LBRACKET range_bound TO range_bound RBRACKET
   38           | • LBRACE range_bound TO range_bound RBRACE
   39           | • LBRACKET range_bound TO range_bound RBRACE
   40           | • LBRACE range_bound TO range_bound RBRACKET

    TERM      shift, and go to state 1
    PHRASE    shift, and go to state 2
    REGEX     shift, and go to state 3
    PREFIX    shift, and go to state 4
    SUFFIX    shift, and go to state 5
    WILDCARD  shift, and go to state 6
    NOT       shift, and go to state 7
    LPAREN    shift, and go to state 8
    LBRACKET  shift, and go to state 9
    LBRACE    shift, and go to state 10
    PLUS      shift, and go to state 11
    MINUS     shift, and go to state 12

    clause         go to state 56
    term_expr      go to state 16
    boosted_expr   go to state 17
    modified_term  go to state 18
    base_term      go to state 19
    range_expr     go to state 20


State 47

    7 clause_list: clause_list OR $@2 • clause
    8 clause: • term_expr
   11       | • NOT @3 @4 clause
   13       | • PLUS $@5 clause
   16       | • MINUS @6 @7 clause
   17 term_expr: • boosted_expr
   19          | • TERM COLON @8 term_expr
   20 boosted_expr: • modified_term
   21             | • modified_term CARET NUMBER
   22             | • modified_term CARET FLOAT
   23 modified_term: • base_term
   24              | • TERM TILDE
   25              | • TERM TILDE NUMBER
   26              | • PHRASE TILDE
   27              | • PHRASE TILDE NUMBER
   28 base_term: • TERM
   29          | • PHRASE
   30          | • REGEX
   31          | • PREFIX
   32          | • SUFFIX
   33          | • WILDCARD
   34          | • range_expr
   36          | • LPAREN @9 clause_list RPAREN
   37 range_expr: • LBRACKET range_bound TO range_bound RBRACKET
   38           | • LBRACE range_bound TO range_bound RBRACE
   39           | • LBRACKET range_bound TO range_bound RBRACE
   40           | • LBRACE range_bound TO range_bound RBRACKET

    TERM      shift, and go to state 1
    PHRASE    shift, and go to state 2
    REGEX     shift, and go to state 3
    PREFIX    shift, and go to state 4
    SUFFIX    shift, and go to state 5
    WILDCARD  shift, and go to state 6
    NOT       shift, and go to state 7
    LPAREN    shift, and go to state 8
    LBRACKET  shift, and go to state 9
    LBRACE    shift, and go to state 10
    PLUS      shift, and go to state 11
    MINUS     shift, and go to state 12

    clause         go to state 57
    term_expr      go to state 16
    boosted_expr   go to state 17
    modified_term  go to state 18
    base_term      go to state 19
    range_expr     go to state 20


State 48

   21 boosted_expr: modified_term CARET NUMBER •

    $default  reduce using rule 21 (boosted_expr)


State 49

   22 boosted_expr: modified_term CARET FLOAT •

    $default  reduce using rule 22 (boosted_expr)


State 50

   19 term_expr: TERM COLON @8 term_expr •

    $default  reduce using rule 19 (term_expr)


State 51

   11 clause: NOT @3 @4 clause •

    $default  reduce using rule 11 (clause)


State 52

   36 base_term: LPAREN @9 clause_list RPAREN •

    $default  reduce using rule 36 (base_term)


State 53

   37 range_expr: LBRACKET range_bound TO range_bound • RBRACKET
   39           | LBRACKET range_bound TO range_bound • RBRACE

    RBRACKET  shift, and go to state 58
    RBRACE    shift, and go to state 59


State 54

   38 range_expr: LBRACE range_bound TO range_bound • RBRACE
   40           | LBRACE range_bound TO range_bound • RBRACKET

    RBRACKET  shift, and go to state 60
    RBRACE    shift, and go to state 61


State 55

   16 clause: MINUS @6 @7 clause •

    $default  reduce using rule 16 (clause)


State 56

    5 clause_list: clause_list AND @1 clause •

    $default  reduce using rule 5 (clause_list)


State 57

    7 clause_list: clause_list OR $@2 clause •

    $default  reduce using rule 7 (clause_list)


State 58

   37 range_expr: LBRACKET range_bound TO range_bound RBRACKET •

    $default  reduce using rule 37 (range_expr)


State 59

   39 range_expr: LBRACKET range_bound TO range_bound RBRACE •

    $default  reduce using rule 39 (range_expr)


State 60

   40 range_expr: LBRACE range_bound TO range_bound RBRACKET •

    $default  reduce using rule 40 (range_expr)


State 61

   38 range_expr: LBRACE range_bound TO range_bound RBRACE •

    $default  reduce using rule 38 (range_expr)
